--- a/index.html
+++ b/index.html
@@ -2,28 +2,26 @@
 <html>
     <head>
     	<meta charset="utf-8">
-    	 <meta name="theme-color" content="#00CDAC" />
+    	 <meta name="theme-color" content="#202124" />
     	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
        <title>Form Creator</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="style.css">
-
+        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> 
     </head>
-    <body style="width: 100%; height: 100%; overflow-x: hidden;">
-    	<div class="mainDiv">
-    		<h1>Hey there! Are you like me bored of writing code for forms?</h1>
-    		<h2>Want to make form easily?</h2>
-    		<p>I got your back man. This form generator will help you to make forms easily and let you get its code. So have a cup of coffee and enjoy</p>
-    		<p>You just need to add desired form you want by clicking below module and then just copy paste the generated code for your designed form</p>
-    		<p >Version 1.2.0</p>
-    	</div>
+    <body style="width: 100%; height: 100%; overflow-x: hidden; background:#202124;">   
+        <div class="heading">
+            <p>FORMME</p>
+            <span>Generate awesome forms</span>
+        </div>
+    	
     	<br>
     <div class="row justify-content-center" style="width: 100%;margin-left: 0.5px">	
     	<div class="col-sm-6 " >
     		<div class="adc card">
     		<div class="addButton">
-    			<h1>Create Your awesome form here</h1>
+    			<h3>Create Your awesome form here</h3>
     			<div class="outputForm" id="out">
     				<form></form>
     			</div>
@@ -45,7 +43,7 @@
     	
     	<div class="col-sm-6 " >
     		<div class="adc card" style="background: white">
-    		<h1>OUTPUT CODE: <span class="btn cpy">copy</span></h1>
+    		<h3>OUTPUT CODE: <span class="btn cpy">copy</span></h3>
     		<div class="output ">
     			<form></form>
     		</div>
@@ -53,6 +51,11 @@
     	</div>
 	</div>
 	<div></div>
+    <div class="footer">
+        <p>I being a lazy created this form generator to help me generate forms 😬</p>
+        <p>This was my first github repo(version 2.0)</p>
+        <p>Made with ❤️ by <a href="https://github.com/agarwalamn">agarwalamn</a></p>
+    </div>
     	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
